tests/ui/closures/2229_closure_analysis/move_closure.stderr
error: First Pass analysis includes:
  --> $DIR/move_closure.rs:182:39
   |
LL |     let c = #[rustc_capture_analysis] move || x;
   |                                       ^^^^^^^^^
   |
note: Capturing x[] -> Immutable
  --> $DIR/move_closure.rs:182:47
   |
LL |     let c = #[rustc_capture_analysis] move || x;
   |                                               ^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:182:39
   |
LL |     let c = #[rustc_capture_analysis] move || x;
   |                                       ^^^^^^^^^
   |
note: Min Capture x[] -> ByValue
  --> $DIR/move_closure.rs:182:47
   |
LL |     let c = #[rustc_capture_analysis] move || x;
   |                                               ^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:13:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         t.0.0 = "new S".into();
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),(0, 0)] -> Mutable
  --> $DIR/move_closure.rs:16:9
   |
LL |         t.0.0 = "new S".into();
   |         ^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:13:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         t.0.0 = "new S".into();
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0),(0, 0)] -> ByValue
  --> $DIR/move_closure.rs:16:9
   |
LL |         t.0.0 = "new S".into();
   |         ^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:29:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         *ref_s += 10;
...  |
LL | |     };
   | |_____^
   |
note: Capturing ref_s[Deref] -> Mutable
  --> $DIR/move_closure.rs:32:9
   |
LL |         *ref_s += 10;
   |         ^^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:29:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         *ref_s += 10;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture ref_s[] -> ByValue
  --> $DIR/move_closure.rs:32:9
   |
LL |         *ref_s += 10;
   |         ^^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:48:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         t.0.0 = "new s".into();
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),Deref,(0, 0)] -> Mutable
  --> $DIR/move_closure.rs:51:9
   |
LL |         t.0.0 = "new s".into();
   |         ^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:48:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         t.0.0 = "new s".into();
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/move_closure.rs:51:9
   |
LL |         t.0.0 = "new s".into();
   |         ^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:69:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         let _t = t.0.0;
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),Deref,(0, 0)] -> Immutable
  --> $DIR/move_closure.rs:72:18
   |
LL |         let _t = t.0.0;
   |                  ^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:69:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         let _t = t.0.0;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/move_closure.rs:72:18
   |
LL |         let _t = t.0.0;
   |                  ^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:89:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         let _t = t.0.0;
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),Deref,(0, 0)] -> ByValue
  --> $DIR/move_closure.rs:92:18
   |
LL |         let _t = t.0.0;
   |                  ^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:89:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         let _t = t.0.0;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/move_closure.rs:92:18
   |
LL |         let _t = t.0.0;
   |                  ^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:108:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         let _t = b.0;
...  |
LL | |     };
   | |_____^
   |
note: Capturing b[Deref,(0, 0)] -> Immutable
  --> $DIR/move_closure.rs:111:18
   |
LL |         let _t = b.0;
   |                  ^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:108:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         let _t = b.0;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture b[] -> ByValue
  --> $DIR/move_closure.rs:111:18
   |
LL |         let _t = b.0;
   |                  ^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:122:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         println!("{}", b.0);
...  |
LL | |     };
   | |_____^
   |
note: Capturing b[Deref,(0, 0)] -> Immutable
  --> $DIR/move_closure.rs:125:24
   |
LL |         println!("{}", b.0);
   |                        ^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:122:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         println!("{}", b.0);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture b[] -> ByValue
  --> $DIR/move_closure.rs:125:24
   |
LL |         println!("{}", b.0);
   |                        ^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:137:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         println!("{}", t.1.0);
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(1, 0),Deref,(0, 0)] -> Immutable
  --> $DIR/move_closure.rs:140:24
   |
LL |         println!("{}", t.1.0);
   |                        ^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:137:5
   |
LL | /     move || {
LL | |
LL | |
LL | |         println!("{}", t.1.0);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(1, 0)] -> ByValue
  --> $DIR/move_closure.rs:140:24
   |
LL |         println!("{}", t.1.0);
   |                        ^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:156:39
   |
LL |     let c = #[rustc_capture_analysis] move || box_p_foo.x += 10;
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: Capturing box_p_foo[Deref,Deref,(0, 0)] -> Mutable
  --> $DIR/move_closure.rs:156:47
   |
LL |     let c = #[rustc_capture_analysis] move || box_p_foo.x += 10;
   |                                               ^^^^^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:156:39
   |
LL |     let c = #[rustc_capture_analysis] move || box_p_foo.x += 10;
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: Min Capture box_p_foo[] -> ByValue
  --> $DIR/move_closure.rs:156:47
   |
LL |     let c = #[rustc_capture_analysis] move || box_p_foo.x += 10;
   |                                               ^^^^^^^^^^^

error: First Pass analysis includes:
  --> $DIR/move_closure.rs:171:39
   |
LL |     let c = #[rustc_capture_analysis] move || p_foo.x += 10;
   |                                       ^^^^^^^^^^^^^^^^^^^^^
   |
note: Capturing p_foo[Deref,Deref,(0, 0)] -> Mutable
  --> $DIR/move_closure.rs:171:47
   |
LL |     let c = #[rustc_capture_analysis] move || p_foo.x += 10;
   |                                               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/move_closure.rs:171:39
   |
LL |     let c = #[rustc_capture_analysis] move || p_foo.x += 10;
   |                                       ^^^^^^^^^^^^^^^^^^^^^
   |
note: Min Capture p_foo[] -> ByValue
  --> $DIR/move_closure.rs:171:47
   |
LL |     let c = #[rustc_capture_analysis] move || p_foo.x += 10;
   |                                               ^^^^^^^

error: aborting due to 22 previous errors

